bk_ida/gccida/c2/mark_reg
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_reg/src/conflict.c:878:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v3] - 5) >= 2 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_reg/src/obj/conflict.o] Error 1
